# hello-world-kubeflow-pipeline

./: README.md  compiled_pipeline.json  hello-world-kubeflow-pipeline-pytorch.ipynb  hello-world-kubeflow-pipeline.ipynb  pyproject.toml  test.py
